# Candle

src/: CMakeLists.txt  MacOSXBundleInfo.plist.in  benchmark.cpp  frmabout.cpp  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp  frmsettings.h  frmsettings.ui  main.cpp  tests.cpp
src/drawers/: gcodedrawer.cpp  gcodedrawer.h  heightmapborderdrawer.cpp  heightmapgriddrawer.cpp  heightmapinterpolationdrawer.cpp  origindrawer.cpp  selectiondrawer.cpp  shaderdrawable.cpp  shaderdrawable.h  tooldrawer.cpp  tooldrawer.h
src/images/: candle.icns  gcode.icns
src/parser/: arcproperties.cpp  arcproperties.h  gcodeparser.cpp  gcodeparser.h  gcodepreprocessorutils.cpp  gcodepreprocessorutils.h  gcodeviewparse.cpp  gcodeviewparse.h  linesegment.cpp  linesegment.h  pointsegment.cpp  pointsegment.h
src/shaders/: fshader.glsl
src/tables/: gcodetablemodel.cpp  gcodetablemodel.h  heightmaptablemodel.cpp  heightmaptablemodel.h
src/translations/: candle_es.ts  candle_fr.ts  candle_pt.ts  candle_ru.ts
src/utils/: interpolation.h  profile.cpp  profile.h  util.h
src/widgets/: colorpicker.cpp  colorpicker.h  comboboxkey.cpp  comboboxkey.h  glwidget.cpp  glwidget.h  scrollarea.cpp  sliderbox.cpp  styledtoolbutton.cpp  styledtoolbutton.h
